Harden-System-Security-v1.0.15.0
* Added the following exploit protections to the Harden System Security app's main executable in the [Microsoft Defender category](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Microsoft-Defender):
    * DisableNonSystemFonts
    * BlockRemoteImageLoads
    * BlockLowLabelImageLoads
    * EnableExportAddressFilter
    * EnableExportAddressFilterPlus
    * EnableImportAddressFilter
    * EnableRopStackPivot
    * EnableRopCallerCheck
    * UserShadowStack
    * UserShadowStackStrictMode
    * MicrosoftSignedOnly
    * AllowStoreSignedBinaries

* Added the following exploit protections to the Windows Service that Harden System Security app installs, in the [Microsoft Defender category](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Microsoft-Defender):

    * DisableNonSystemFonts
    * BlockRemoteImageLoads
    * BlockLowLabelImageLoads
    * EnableExportAddressFilter
    * EnableExportAddressFilterPlus
    * EnableImportAddressFilter
    * EnableRopStackPivot
    * EnableRopCallerCheck
    * UserShadowStack
    * UserShadowStackStrictMode
    * MicrosoftSignedOnly
    * AllowStoreSignedBinaries
    * BlockDynamicCode

* The Harden System Security's Windows Service is now compatible with the [Arbitrary Code Guard (ACG) Exploit Protection](https://learn.microsoft.com/defender-endpoint/exploit-protection-reference#arbitrary-code-guard).

* Created [a new page called **Cryptographic Bill of Materials (CBOM)**](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Cryptographic-Bill-of-Materials), completing [this feature request](https://github.com/HotCakeX/Harden-Windows-Security/issues/808). The CBOM offers a system-level inventory and introspection of the operating system cryptography, surfacing the algorithms, curves, cipher suites, and providers that define the platform's cryptographic posture. By normalizing what the OS exposes, it delivers SBOM-like transparency for crypto: enabling evidence-based audits, b

--- a/Harden System Security/MainWindow.xaml
+++ b/Harden System Security/MainWindow.xaml
@@ -340,6 +340,7 @@
                 <NavigationViewItem x:Name="FileReputationNavItem" x:Uid="FileReputationNavItem" Icon="{x:Bind ViewModel.FileReputationIcon, Mode=OneWay}" Tag="FileReputation"/>
                 <NavigationViewItem x:Name="GroupPolicyEditorNavItem" x:Uid="GroupPolicyEditorNavItem" Icon="{x:Bind ViewModel.GroupPolicyEditorIcon, Mode=OneWay}" Tag="GroupPolicyEditor"/>
                 <NavigationViewItem x:Name="AuditPoliciesNavItem" x:Uid="AuditPoliciesNavItem" Icon="{x:Bind ViewModel.AuditPoliciesIcon, Mode=OneWay}" Tag="AuditPolicies"/>
+                <NavigationViewItem x:Name="CBOMNavItem" Icon="{x:Bind ViewModel.CBOMIcon, Mode=OneWay}" x:Uid="CBOMNavItem" Tag="CBOM"/>
 
                 <!-- Documentation Group -->
                 <NavigationViewItemHeader x:Name="DocumentationNavigationViewItemHeader" x:Uid="DocumentationNavigationViewItemHeader"/>
@@ -418,7 +419,7 @@
                                 <Button HorizontalAlignment="Center"
                                         VerticalAlignment="Bottom"
                                         x:Uid="OptimizeMemoryButton"
-                                        IsEnabled="{x:Bind ViewModel.OptimizeMemoryButtonIsEnabled, Mode=OneWay}"                                        
+                                        IsEnabled="{x:Bind ViewModel.OptimizeMemoryButtonIsEnabled, Mode=OneWay}"
                                         Click="{x:Bind ViewModel.OptimizeMemory}">
                                     <Button.ContentTemplate>
                                         <DataTemplate x:DataType="x:String">
