--- a/Harden System Security/Pages/Protects/Microsoft365AppsSecurityBaseline.xaml
+++ b/Harden System Security/Pages/Protects/Microsoft365AppsSecurityBaseline.xaml
@@ -35,19 +35,20 @@
                             Severity="{x:Bind ViewModel.MainInfoBarSeverity, Mode=OneWay}"
                             IsClosable="{x:Bind ViewModel.MainInfoBarIsClosable, Mode=OneWay}" />
 
-        <Border Grid.Row="2" Margin="0,10,0,10" Style="{StaticResource GridCardStyle}" Padding="8">
+        <Expander Grid.Row="2" Margin="0,0,0,10" Padding="8" HorizontalAlignment="Stretch">
+            <Expander.Header>
 
-            <controls:WrapPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                <controls:WrapPanel Orientation="Horizontal" HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
                                 HorizontalSpacing="10"
                                 VerticalSpacing="10">
 
-                <ProgressRing IsActive="True"
+                    <ProgressRing IsActive="True"
                               Visibility="{x:Bind ViewModel.ProgressBarVisibility, Mode=OneWay}"
                               VerticalAlignment="Center" />
 
-                <!-- Apply All Button -->
-                <customUI:AnimatedCancellableButton
+                    <!-- Apply All Button -->
+                    <customUI:AnimatedCancellableButton
                     IsEnabled="{x:Bind ViewModel.IsApplyButtonEnabled, Mode=OneWay}"
                     CancelMethod="{x:Bind ViewModel.ApplyAllCancellableButton.Cancel, Mode=OneWay}"
                     ExternalOperationInProgress="{x:Bind ViewModel.ApplyAllCancellableButton.IsOperationInProgress, Mode=OneWay}"
@@ -65,8 +66,8 @@
                     ExternalOperationStarted="{x:Bind ViewModel.ApplyAllCancellableButton.OperationStarted, Mode=OneWay}"
                     Click="{x:Bind ViewModel.ApplySecurityBaseline}"/>
 
-                <!-- Remove All Button -->
-                <customUI:AnimatedCancellableButton
+                    <!-- Remove All Button -->
+                    <customUI:AnimatedCancellableButton
                     IsEnabled="{x:Bind ViewModel.IsRemoveButtonEnabled, Mode=OneWay}"
                     CancelMethod="{x:Bind ViewModel.RemoveAllCancellableButton.Cancel, Mode=OneWay}"
                     ExternalOperationInProgress="{x:Bind ViewModel.RemoveAllCancellableButton.IsOperationInProgress, Mode=OneWay}"
@@ -84,8 +85,8 @@
                     ExternalOperationStarted="{x:Bind ViewModel.RemoveAllCancellableButton.OperationStarted, Mode=OneWay}"
                     Click="{x:Bind ViewModel.RemoveSecurityBaseline}"/>
 
-                <!-- Verify All Button -->
-                <customUI:AnimatedCancellableButton
+                    <!-- Verify All Button -->
+                    <customUI:AnimatedCancellableButton
                     IsEnabled="{x:Bind ViewModel.IsVerifyButtonEnabled, Mode=OneWay}"
                     CancelMethod="{x:Bind ViewModel.VerifyAllCancellableButton.Cancel, Mode=OneWay}"
                     ExternalOperationInProgress="{x:Bind ViewModel.VerifyAllCancellableButton.IsOperationInProgress, Mode=OneWay}"
@@ -103,85 +104,102 @@
                     ExternalOperationStarted="{x:Bind ViewModel.VerifyAllCancellableButton.OperationStarted, Mode=OneWay}"
                     Click="{x:Bind ViewModel.VerifySecurityBaseline}"/>
 
-                <Button x:Uid="ClearDataButton" IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}" Click="{x:Bind ViewModel.ClearData}">
-                    <Button.ContentTemplate>
-                        <DataTemplate x:DataType="x:String">
-                            <StackPanel Orientation="Horizontal" Spacing="8">
-                                <FontIcon Glyph="&#xED62;" FontSize="16"/>
-                                <TextBlock Text="{x:Bind}"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </Button.ContentTemplate>
-                </Button>
+                    <Button x:Uid="ClearDataButton" IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}" Click="{x:Bind ViewModel.ClearData}">
+                        <Button.ContentTemplate>
+                            <DataTemplate x:DataType="x:String">
+                                <StackPanel Orientation="Horizontal" Spacing="8">
+                                    <FontIcon Glyph="&#xED62;" FontSize="16"/>
+                                    <TextBlock Text="{x:Bind}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </Button.ContentTemplate>
+                    </Button>
 
-                <Button x:Uid="ExportToJsonButton" IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}" Click="{x:Bind ViewModel.ExportToJson}">
-                    <Button.ContentTemplate>
-                        <DataTemplate x:DataType="x:String">
-                            <StackPanel Orientation="Horizontal" Spacing="8">
-                                <FontIcon Glyph="&#xE74E;" FontSize="16"/>
-                                <TextBlock Text="{x:Bind}"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </Button.ContentTemplate>
-                </Button>
+                    <Button x:Uid="ExportToJsonButton" IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}" Click="{x:Bind ViewModel.ExportToJson}">
+                        <Button.ContentTemplate>
+                            <DataTemplate x:DataType="x:String">
+                                <StackPanel Orientation="Horizontal" Spacing="8">
+                                    <FontIcon Glyph="&#xE74E;" FontSize="16"/>
+                                    <TextBlock Text="{x:Bind}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </Button.ContentTemplate>
+                    </Button>
 
-                <Button IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}"
-                        x:Uid="DownloadURLButton"
-                        VerticalAlignment="Center">
-                    <Button.Content>
-                        <StackPanel Orientation="Horizontal" Spacing="7">
-                            <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}"
-                                      Glyph="&#xE774;"/>
-                            <TextBlock x:Uid="DownloadURLButtonText"
-                                       VerticalAlignment="Center"/>
-                        </StackPanel>
-                    </Button.Content>
-                    <Button.Flyout>
-                        <Flyout>
-                            <StackPanel Orientation="Vertical"
-                                        Spacing="10"
-                                        HorizontalAlignment="Center">
-                                <TextBox Text="{x:Bind ViewModel.DownloadURL, Mode=TwoWay}"
-                                         MaxWidth="250"
-                                         HorizontalAlignment="Center"
-                                         VerticalAlignment="Top"
-                                         TextWrapping="Wrap"/>
+                    <ComboBox ItemsSource="{x:Bind ViewModel.SecurityBaselinesComboBoxItemsSource}"
+                          x:Uid="SecurityBaselinesComboBox"
+                          SelectedItem="{x:Bind ViewModel.SecurityBaselinesComboBoxSelectedItem, Mode=TwoWay}" />
 
-                                <Button x:Uid="ResetURLButton"
-                                        HorizontalAlignment="Center"
-                                        VerticalAlignment="Bottom"
-                                        Click="{x:Bind ViewModel.ResetToDefaultUrl}"/>
-                            </StackPanel>
-                        </Flyout>
-                    </Button.Flyout>
-                </Button>
-
-                <!-- Total chip -->
-                <Border CornerRadius="8"
+                    <!-- Total chip -->
+                    <Border CornerRadius="8"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
                         Padding="10,6"
                         BorderThickness="1"
                         BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
                         Background="{ThemeResource CardBackgroundFillColorDefaultBrush}">
-                    <StackPanel Orientation="Horizontal" Spacing="6" VerticalAlignment="Center">
-                        <FontIcon Glyph="&#xE8A9;" Foreground="{ThemeResource AccentTextFillColorPrimaryBrush}" />
-                        <TextBlock VerticalAlignment="Center">
+                        <StackPanel Orientation="Horizontal" Spacing="6" VerticalAlignment="Center">
+                            <FontIcon Glyph="&#xE8A9;" Foreground="{ThemeResource AccentTextFillColorPrimaryBrush}" />
+                            <TextBlock VerticalAlignment="Center">
                             <Run x:Uid="TotalText" />
                             <Run Text="{x:Bind ViewModel.VerificationResults.Count, Mode=OneWay}" FontWeight="SemiBold" />
-                        </TextBlock>
-                    </StackPanel>
-                </Border>
+                            </TextBlock>
+                        </StackPanel>
+                    </Border>
 
-                <TextBox Width="300"
+                    <TextBox Width="300"
                          IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}"
                          x:Uid="SearchBoxTextBox"
                          Text="{x:Bind ViewModel.SearchKeyword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                          VerticalAlignment="Center"
                          VerticalContentAlignment="Center" />
 
-            </controls:WrapPanel>
-        </Border>
+                </controls:WrapPanel>
+
+            </Expander.Header>
+
+            <Expander.Content>
+
+                <controls:WrapPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalSpacing="10" VerticalSpacing="10">
+
+                    <customUI:ButtonV2 x:Uid="FileBrowseButton"
+                                       ObservedData="{x:Bind ViewModel.CustomBaselineFilePath, Mode=OneWay}"
+                                       Click="{x:Bind ViewModel.CustomBaselineFilePathButton_Click}"
+                                       IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}">
+
+                        <customUI:ButtonV2.ContentTemplate>
+                            <DataTemplate x:DataType="x:String">
+                                <StackPanel Orientation="Horizontal" Spacing="8">
+                                    <FontIcon Glyph="&#xE8DA;" FontSize="16"/>
+                                    <TextBlock Text="{x:Bind}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </customUI:ButtonV2.ContentTemplate>
+
+                        <customUI:ButtonV2.Flyout>
+                            <Flyout>
+
+                                <controls:WrapPanel Orientation="Vertical" HorizontalSpacing="15" VerticalSpacing="15">
+
+                                    <Button x:Uid="ClearButton" Click="{x:Bind ViewModel.ClearCustomBaselineFilePath}" />
+
+                                    <TextBlock x:Uid="ViewSelectedFilesTextBlock" TextWrapping="WrapWholeWords" />
+
+                                    <TextBox Text="{x:Bind ViewModel.CustomBaselineFilePath, Mode=OneWay}"
+                                             TextWrapping="Wrap" AcceptsReturn="True" IsSpellCheckEnabled="False"
+                                             MinWidth="400" IsReadOnly="True" />
+
+                                </controls:WrapPanel>
+
+                            </Flyout>
+                        </customUI:ButtonV2.Flyout>
+
+                    </customUI:ButtonV2>
+
+                </controls:WrapPanel>
+
+            </Expander.Content>
+        </Expander>
 
         <customUI:ListViewV2 Grid.Row="3"
                              RegistryKey="Microsoft365AppsSecurityBaseline"
