Harden System Security v1.0.22.0
* When running Harden System Security unelevated and try to navigate to a page that requires elevation, after accepting the elevation prompt, you will no longer be taken to the home page, instead the app will automatically navigate to the same page you were trying to access before the elevation prompt, improving user experience and saving time.

* Fixed an incompatibility with Nvidia drivers. In the Microsoft Defender category, there is an item that offers applying exploit protections to the "HardenSystemSecurity.exe" which is the main process of the application. In one of the previous versions, 2 new exploit protections named "MicrosoftSignedOnly" and "AllowStoreSignedBinaries" were added to the list, however Nvidia driver causes compatibility issues because it tries to load into the app's process which is something it isn't supposed to do, however as users reported on GitHub, this is causing inconvenience so in this version those 2 exploit protections are no longer applied when you apply exploit protections to Harden System Security in the Microsoft Defender category. Please see this GitHub issue for more info regarding this change: https://github.com/HotCakeX/Harden-Windows-Security/issues/913

--- a/AppControl Manager/CustomUIElements/GraphAuthPanel.xaml
+++ b/AppControl Manager/CustomUIElements/GraphAuthPanel.xaml
@@ -286,13 +286,12 @@
 
                                 </StackPanel>
 
-
                                 <ListView HorizontalAlignment="Center"
                                           Visibility="{x:Bind Host.AuthCompanionCLS.AuthenticatedAccountsListViewVisibility, Mode=OneWay}"
                                           x:Name="AuthenticatedAccountsListView"
                                           BorderThickness="0"
                                           CornerRadius="5"
-                                          ItemsSource="{x:Bind GraphVM.AuthenticatedAccounts, Mode=OneWay}"
+                                          ItemsSource="{x:Bind AuthenticatedAccounts, Mode=OneWay}"
                                           SelectedItem="{x:Bind Host.AuthCompanionCLS.ListViewSelectedAccount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                           Height="300"
                                           SelectionMode="Single">
